<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawerItemCustomers"
        android:icon="@drawable/ic_drawer_home"
        android:title="@string/drawer_customer" />
    <item
        android:id="@+id/drawerItemOrders"
        android:icon="@drawable/ic_drawer_orders"
        android:title="@string/drawer_order" />
    <item
        android:id="@+id/drawerItemEmployees"
        android:icon="@drawable/ic_drawer_employee"
        android:title="@string/drawer_employee" />
    <item
        android:id="@+id/drawerItemChatting"
        android:icon="@drawable/ic_drawer_employee"
        android:title="Chatting" />
    <item
        android:id="@+id/drawerItemProfile"
        android:icon="@drawable/ic_drawer_profile"
        android:title="@string/drawer_profile" />
    <item
        android:id="@+id/drawerItemSettings"
        android:icon="@drawable/ic_drawer_settings"
        android:title="@string/drawer_settings" />
    <item
        android:id="@+id/drawerItemReportBug"
        android:icon="@drawable/ic_drawer_report_bug"
        android:title="@string/drawer_report_bug" />
    <item
        android:id="@+id/drawerItemLogout"
        android:icon="@drawable/ic_drawer_logout"
        android:title="@string/drawer_logout" />
</menu>