<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <include
        layout="@layout/fragment_sleeve_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/frontWidth"
        style="@style/text_view_login_signup"
        android:text="@string/enter_front_width"
        />

    <EditText
        android:id="@+id/inputFrontWidth"
        style="@style/edit_text_login_signup"
        android:autofillHints="Front Width"
        android:ems="10"
        android:hint="@string/front_width"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/backWidth"
        style="@style/text_view_login_signup"
        android:text="@string/enter_back_width"
        />

    <EditText
        android:id="@+id/inputBackWidth"
        style="@style/edit_text_login_signup"
        android:autofillHints="Back Width"
        android:ems="10"
        android:hint="@string/back_width"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/individualShoulder"
        style="@style/text_view_login_signup"
        android:text="@string/enter_individual_shoulder"
        />

    <EditText
        android:id="@+id/inputIndividualShoulder"
        style="@style/edit_text_login_signup"
        android:autofillHints="Individual Shoulder"
        android:ems="10"
        android:hint="@string/individual_shoulder"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/firstButtonPos"
        style="@style/text_view_login_signup"
        android:text="@string/enter_first_button_position"
        />

    <EditText
        android:id="@+id/inputFirstButtonPos"
        style="@style/edit_text_login_signup"
        android:autofillHints="First Button Position"
        android:ems="10"
        android:hint="@string/first_button_position"
        android:inputType="numberDecimal"
        />

</LinearLayout>
</ScrollView>