<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".employeePageForTailors.DialogNewEmpDetails">

    <TextView
        android:id="@+id/tvOrderID"
        style="@style/text_view_login_signup"
        android:text="@string/enter_order_id" />

    <EditText
        android:id="@+id/inputOrderID"
        style="@style/edit_text_login_signup"
        android:hint="@string/assign_order_id"
        android:autofillHints="Order ID"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvCustomerID"
        style="@style/text_view_login_signup"
        android:text="@string/pick_customer_id" />

    <!-- Customer ID Picker -->
    <NumberPicker
        android:id="@+id/npCustomerID"
        style="@style/picker_view"
        android:clickable="false" />

    <TextView
        android:id="@+id/tvEmployeeID"
        style="@style/text_view_login_signup"
        android:text="@string/pick_employee_id" />

    <!-- Employee ID Picker -->
    <NumberPicker
        android:id="@+id/npEmployeeID"
        style="@style/picker_view"
        />

    <TextView
        android:id="@+id/tvOrderPrice"
        style="@style/text_view_login_signup"
        android:text="@string/enter_order_price" />

    <EditText
        android:id="@+id/inputOrderPrice"
        style="@style/edit_text_login_signup"
        android:hint="@string/assign_payment"
        android:autofillHints="Employee ID"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvDeliverDate"
        style="@style/text_view_login_signup"
        android:layout_marginBottom="10dp"
        android:text="@string/pick_order_deliver_date" />

    <!-- Order Deliver Date Picker -->
    <Button
        android:id="@+id/btnPickDate"
        style="@style/button_style"
        android:text="@string/pick_date"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelAddingOrder"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btnSaveNewOrder"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_Add" />
    </LinearLayout>
</LinearLayout>

    </ScrollView>

